--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "next-themes": "^0.3.0",
     "postcss": "^8.4.49",
     "puppeteer": "^24.2.0",
+    "puppeteer-core": "^24.3.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
