--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
     "eslint-config-next": "14.1.0",
@@ -59,6 +60,8 @@
     "lucide-react": "^0.446.0",
     "next": "^14.2.20",
     "next-themes": "^0.3.0",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
     "pm2": "^5.4.3",
     "postcss": "^8.4.49",
     "puppeteer": "^24.2.0",
