--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "10.4.15",
     "chart.js": "^4.4.2",
+    "chrome-aws-lambda": "^10.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -64,7 +65,7 @@
     "pm2": "^5.4.3",
     "postcss": "^8.4.49",
     "puppeteer": "^24.2.0",
-    "puppeteer-core": "^24.3.1",
+    "puppeteer-core": "^24.4.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-day-picker": "^8.10.1",
