--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test:scrape": "node test-scrape.js",
-    "scraper": "node server/scraper-service.js"
+    "test-scrapers": "node test-scrapers.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -39,14 +38,15 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@sparticuz/chromium-min": "^133.0.0",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@vercel/analytics": "^1.2.2",
+    "@vercel/kv": "^3.0.0",
     "@vercel/speed-insights": "^1.0.10",
     "autoprefixer": "10.4.15",
     "chart.js": "^4.4.2",
-    "chrome-aws-lambda": "^10.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -56,15 +56,17 @@
     "eslint": "8.49.0",
     "eslint-config-next": "14.1.0",
     "fs": "^0.0.1-security",
+    "fs.promises": "^0.1.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next": "^14.2.20",
     "next-themes": "^0.3.0",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
-    "pm2": "^5.4.3",
+    "path": "^0.12.7",
+    "pm2": "latest",
     "postcss": "^8.4.49",
-    "puppeteer": "^24.2.0",
+    "puppeteer": "^24.4.0",
     "puppeteer-core": "^24.4.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -77,6 +79,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "typescript": "5.2.2",
     "vaul": "^0.9.9",
     "zod": "^3.23.8"
